k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stoneflow
  labels:
    name: stoneflow
    app.kubernetes.io/part-of: stoneflow-enterprise
