k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stoneflow-service
  namespace: stoneflow
  labels:
    app: stoneflow
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: stoneflow
